# Heimdall

./: .env  .gitignore  .markdownlint.json  .markdownlintignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  README_PR.md  build.sh  package.json  svelte.config.js  svelte.config.ts  vite.config.ts
.github/: PR_BODY.md  PR_DESCRIPTION.md  PR_PLACEHOLDER.md  copilot-instructions.md  pull_request_template.md  pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  chore.md  documentation.md  feature.md  feature_request.yml  security.md  test.md
.github/agent_memory/: active_context.md  handoff.md  progress_tracker.md  project_brief.md  system_patterns.md  tech_stack.md
.github/agents/: Architect.agent.md  CIManager.agent.md  CodeReviewer.agent.md  DevOpsEngineer.agent.md  Developer.agent.md  Documentation.agent.md  DocumentationOwner.agent.md  ProjectLead.agent.md  QAEngineer.agent.md  ReleaseManager.agent.md  Reviewer.agent.md  SecurityEngineer.agent.md  SupportEngineer.agent.md  UXDesigner.agent.md
.github/instructions/: Feature.instructions.md  GitHubActions.instructions.md  JSON.instructions.md  Markdown.instructions.md  Rust.instructions.md  YAML.instructions.md
.github/mcp/: github.mcp.json
.github/prompt-snippets/: CodingStandards.md  Personality.md  Technologies.md
.github/prompts/: ComprehensiveArchitecture.md  IssuePlanning.md  Readme.md  UnitTest.md
.github/workflows/: ci.yml  integration-tests.yml  test.yml
configuration/: config.json
docker/: docker-compose.yml
docker/postgres-age/: Dockerfile
docker/postgres-age/initdb/: 01-extensions.sql
docker/scripts/: start-postgres.sh  stop-postgres.sh
docs/: POSTGRES_AGE_SETUP.md  README.md  TESTING.md  mcp-server-test-script.md  mcp-server-tests.md  mcp-server-verification-summary.md  provider-configuration.md
docs/design/: Architecture.md  CI-GATING-RULES.md  DataModel.md  Graph.md  Implementation-Roadmap.md  KMS-Vault-Plan.md  MergeRules.md  Migration-Backfill-Plan.md  Normalizers.md  TEST-COVERAGE-ANALYSIS.md  choices.md
docs/design/features/: API-001-External-API-Caller-Enrichment.feature.json  API-001-External-API-Caller-Enrichment.md  ARCH-001-Architecture-Review.feature.json  ARCH-001-Architecture-Review.md  ARCH-001.4-KMS-Vault-Integration.feature.json  ARCH-001.4-KMS-Vault-Integration.md  ARCH-001.5-Migration-Backfill-Plan.feature.json  ARCH-001.5-Migration-Backfill-Plan.md  CFG-001-Config-Module.feature.json  CFG-001-Config-Module.md  FEATURES-Requirements-clean.md  FEATURES-Requirements-final.md  FEATURES-Requirements.md  GRA-001-Graph-Schema.feature.json  GRA-001-Graph-Schema.md  ING-001-Bulk-Dump-Normalization.feature.json  ING-001-Bulk-Dump-Normalization.md  ING-002-Streaming-Ingest-Parsers.feature.json  ING-002-Streaming-Ingest-Parsers.md  M0T3-Graph-Schema-AGE-Client.feature.json  M0T3-Graph-Schema-AGE-Client.md  M4-T4.2-Integration-E2E-Test-Harness.feature.json  M4-T4.2-Integration-E2E-Test-Harness.md  NORM-001-Canonicalizers.feature.json  NORM-001-Canonicalizers.md  OBS-001-Observability-Testing.feature.json  OBS-001-Observability-Testing.md  OPS-002-Deployment-Runbook.feature.json  OPS-002-Deployment-Runbook.md  SEC-001-PII-Policy-Field-Encryption.feature.json  SEC-001-PII-Policy-Field-Encryption.md  SEC-002-Secret-Management.feature.json  SEC-002-Secret-Management.md  SEC-002-Security-Audit-Checklist.feature.json  SEC-002-Security-Audit-Checklist.md  SYNC-001-Multi-Heimdall-Synchronization.feature.json  SYNC-001-Multi-Heimdall-Synchronization.md  TEST-001-Test-Coverage.feature.json  TEST-001-Test-Coverage.md
docs/ops/: deployment-runbook.md  key-rotation.md  secrets.md
docs/security/: audit-checklist.md
examples/: merge_resolver_demo.rs
server/: server.ts
sql/v1/: 000-prerequisites.sql  001-create_graph.sql  README.md
src/: age_client.rs  app.d.ts  app.html  error.html  health.rs  hooks.server.ts  lib.rs  main.rs  sanity.test.ts  state.rs  tls_utils.rs
src/config/: mod.rs
src/devops/: docker_manager.rs  mod.rs  rate_limiter.rs
src/enrich/: mod.rs  provider_config.rs  resilient_client.rs
src/ingest/: bulk_normalizer.rs  format_detection.rs  handler.rs  mod.rs  ndjson.rs  test_utils.rs
src/ingest/parsers/: compressed.rs  csv.rs  mod.rs  ndjson.rs  xlsx.rs
src/lib/: common.ts  mod.rs
src/lib/controls/: Button.svelte  Panel.svelte  WarningPanel.svelte
src/lib/normalizers/: mod.rs
src/lib/server/: ageClient.test.ts  ageClient.ts  index.ts
src/lib/server/config/: index.test.ts  index.ts
src/lib/server/enrich/: adapter.ts  circuitBreaker.ts  config.ts  index.ts  rateLimit.ts  retry.ts  scheduler.ts  workerPool.ts
src/lib/server/enrich/adapters/: asn.ts  geoip.ts
src/lib/server/kms/: README.md  index.ts
src/lib/server/kms/providers/: aws.ts  gcp.ts  local.ts  vault.ts
src/observability/: logging.rs  metrics.rs  mod.rs  tracing_setup.rs
src/persist/: mod.rs
src/pii/: README.md  mod.rs  pii_policy.rs
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/api/upload/: +server.ts
src/styles/: app.css  app.theme.css
src/sync/: agent.rs  auth.rs  merge.rs  mod.rs
tests/: integration_dev_db.rs  integration_e2e.rs  integration_enrich.rs  integration_enrichment_mock.rs  integration_large_files.rs  integration_merge.rs  integration_multipart.rs  integration_pii_policy.rs  integration_schema_migration.rs  integration_security.rs  integration_sync.rs  integration_sync_partition.rs  integration_tls.rs  observability_tests.rs  security_audit_logging.rs  security_oidc_validation.rs  security_pii_backup_protection.rs  security_tls_validation.rs
tests/common/: mod.rs
