[package]
name = "vanopticon_heimdall"
version = "1.0.0-alpha.1"
edition = "2024"
description = "Heimdall (named for the keeper of the Rainbow Bridge) is the ETL, data scrubbing, normalization, enrichment, and tool-bridging component of the Vanopticon suite. It provides secure, resilient, and auditable ingestion pipelines that normalize and correlate telemetry into a graph model for downstream analysis, detection, and response."
keywords = ["data-scrubbing", "enrichment", "etl", "observability", "security"]
categories = ["database", "network-programming", "security"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8.7", features = ["http2", "macros", "multipart"] }
clap = { version = "4.5.53", features = ["derive", "env", "string", "unicode"] }
config = "0.15.19"
# Ingest / normalization utilities
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1.7"
dirs = "6.0.0"
idna = "1.0"
fern = { version = "0.7.1", features = ["colored", "date-based"] }
flate2 = "1.0"
futures-util = "0.3"
hostname = "0.4"
http-body-util = "0.1"
hyper = { version = "1.8", features = ["full"] }
hyper-util = "0.1"
jsonwebtoken = "9.3"
log = { version = "0.4.29", features = ["serde"] }
once_cell = "1.20"
# Observability: structured logging, metrics, tracing
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics"] }
prometheus = "0.13"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.21", default-features = false, features = ["logging"] }
rustls-native-certs = "0.7"
rustls-pemfile = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# SHA-256 for one-way hashing of PII
sha2 = "0.10"
# Chrono for timestamps in audit logs
chrono = "0.4"
sqlx = { version = "0.7", features = [
  "macros",
  "postgres",
  "runtime-tokio-native-tls"
] }
thiserror = "2.0.17"
# Replaced SurrealDB (heavy native build) with PostgreSQL+Apache AGE+pgvector for graph+vector store.
# See `docker-compose.yml` and `docker/postgres-age/Dockerfile` for the development container.
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = { version = "0.23", default-features = false, features = [
  "logging"
] }
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.5.2", features = ["full", "log", "tokio", "tokio-stream"] }
tower-http = { version = "0.6.7", features = ["full", "sensitive-headers"] }
url = { version = "2.5.7", features = ["serde"] }
x509-parser = "0.15"
# zip 2.3.0+ addresses GHSA-9w5j-4mwv-2wj8 (path canonicalization vulnerability)
zip = "2.3.0"

[dev-dependencies]
rcgen = "0.9"
tempfile = "3.6"

[features]
# Default is a small set of fast unit tests. Other test groups can be enabled
# with `--features <group>` when running `cargo test`.
default = ["unit-tests"]
all-tests = ["devops-tests", "ingest-tests", "integration-tests", "unit-tests"]
devops-tests = []
ingest-tests = []
integration-tests = []
unit-tests = []
